--- a/quiz_app/templates/quiz_app/base.html
+++ b/quiz_app/templates/quiz_app/base.html
@@ -84,7 +84,7 @@
                             <i class="bi bi-folder2-open"></i> Quản lý Nội dung
                         </a>
                     </li>
-                    <li class="nav-item"> {# <-- THÊM KHỐI LI NÀY VÀO #}
+                    <li class="nav-item">
                         <a href="{% url 'quiz_report_list' %}" class="nav-link">
                             <i class="bi bi-graph-up"></i> Báo cáo & Thống kê
                         </a>
