--- a/quiz_app/templates/quiz_app/question_list.html
+++ b/quiz_app/templates/quiz_app/question_list.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    {# MODAL TẠO CÂU HỎI MỚI - KHÔI PHỤC LẠI NỘI DUNG FORM ĐẦY ĐỦ #}
+    {# MODAL TẠO CÂU HỎI MỚI #}
     <div class="modal fade" id="createQuestionModal" tabindex="-1" aria-labelledby="createQuestionModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
