--- a/quiz_app/templates/quiz_app/take_quiz.html
+++ b/quiz_app/templates/quiz_app/take_quiz.html
@@ -1,4 +1,5 @@
 {% extends 'quiz_app/base.html' %}
+{% load static %}
 {% load quiz_extras %}
 
 {% block title %}Làm bài: {{ quiz.quiz_name }}{% endblock %}
